--- a/sensor/package.json
+++ b/sensor/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^0.7.0",
     "bluebird": "^3.0.5",
+    "colors": "^1.1.2",
     "serialport": "^2.0.5"
   }
 }
