--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "axios": "^0.7.0",
     "body-parser": "^1.14.1",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "leaflet": "^0.7.7",
+    "loaders.css": "^0.1.1"
   }
 }
