--- a/sensor/config.json
+++ b/sensor/config.json
@@ -1,6 +1,7 @@
 {
     "centralServer": {
-        "hostURL": "http://192.168.100.103:8080/data"
+        "hostURL": "http://192.168.100.203:8080/data"
     },
-    "city": "Cergy"
+    "city": "Cergy",
+    "roofSurface": 20
 }
