--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "axios": "^0.7.0",
     "body-parser": "^1.14.1",
+    "chartist": "^0.9.5",
     "express": "^4.13.3",
     "leaflet": "^0.7.7",
-    "loaders.css": "^0.1.1"
+    "loaders.css": "^0.1.1",
+    "socket.io": "^1.3.7"
   }
 }
