--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.13.3",
     "leaflet": "^0.7.7",
     "loaders.css": "^0.1.1",
+    "nodemailer": "^1.10.0",
+    "nodemailer-smtp-transport": "^1.0.4",
     "socket.io": "^1.3.7"
   }
 }
