--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Embedded linux interface with sensors and central server",
   "main": "src/main.js",
   "scripts": {
+    "start": "node src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
